--- a/LethalPlayers.csproj
+++ b/LethalPlayers.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>BiggerLobby</AssemblyName>
+    <AssemblyName>LethalPlayers</AssemblyName>
     <Description>Increase the max players in Lethal Company</Description>
     <Version>1.0.5</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
