--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
+	<PackageReference Include="HarmonyX" Version="2.10.2" />
   </packageSources>
 </configuration>
