idk why but no buildy

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
+	 <add key="nugget" value="https://api.nuget.org/v3/index.json" />
 	<PackageReference Include="HarmonyX" Version="2.10.2" />
   </packageSources>
 </configuration>
